# hugoestudio

hugoestudio-0.1/: README  configure  configure.in
hugoestudio-0.1/doc/: Makefile.am
hugoestudio-0.1/doc/en/: Makefile.am
hugoestudio-0.1/src/: Hugocons.h  Hugofis.h  Hugomat.cpp  Hugomat.h  Hugoqui.h  Makefile.am  Makefile.in  huestudioicon.xpm  hugoestudio.cpp  hugoestudio.h  hugopanel.cpp  hugopanel.h  includes.h  interprete.cpp  interprete.h  traduccion.h  traduccion3.h
hugoestudio-0.2/: .tm_project.cache  ChangeLog  Doxyfile  Makefile  Makefile.in  README on troubles  TODO  config.status  configure  hugoestudio.kdevelop  hugoestudio.kdevelop.pcs  hugoestudio.kdevelop.spec  hugoestudio.kdevses  hugoestudio.prj  hugoestudio.pws  hugoestudio.tag  libtool
hugoestudio-0.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hugoestudio-0.2/debug/src/: .kdbgrc.hugoestudio  TempDebug.hs  TempInterpreteRes.hs
hugoestudio-0.2/doc/en/: index.docbook
hugoestudio-0.2/src/: Hugodos.h  Hugomat.cpp  Hugomat.h  Hugomat.loT  Makefile  Makefile.am  Makefile.in  hugoestudio.cpp  hugoestudio.desktop  hugoestudio.h  hugopanel.cpp  hugopanel.h  includes.h  interprete.cpp  interprete.h  traduccion.h  traduccion2.h
hugoestudio-0.2/templates/: h
